[package]
name = "sldb_tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync"] }
dashmap = "6.1.0"
parking_lot = "0.12.3"
sldb_core = { path = "../core" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
